syntax = "proto3";

option csharp_namespace = "Retailer.GrpcService";

package greet;

//import "google/protobuf/empty.proto";

service FileGreeter {
  rpc FileDownload (FileInfo) returns (stream BytesContent);
  rpc FileUpload (stream BytesContent) returns (EmptyMessage);
}

message FileInfo {
  string fileName = 1;
  string fileExtension = 2;
}

message BytesContent {
  int64 fileSize = 1;
  bytes buffer = 2;
  int32 readedByte = 3;
  FileInfo fileInfo = 4;
}

message EmptyMessage{

}
